# cpp_training

Week1/Day1/Assign1/: .bashrc  Dockerfile  README.md  build.sh  killall.sh
Week1/Day1/Assign1/code/: Makefile  hello-brute-force.cpp
Week1/Day2/: README.md
Week1/Day2/AssignFloatPrecision/: Makefile  float-precision.cpp
Week1/Day2/AssignTypeSizes/: Makefile  fun-with-types  fun-with-types.cpp
Week1/Day3/: README.md
Week1/Day3/AssignArrayVsVector/: Makefile  example.cpp
Week1/Day3/AssignArraysAndVectors/: Makefile  arrays-and-vectors.cpp  src  src.cpp
Week1/Day3/AssignMixedArrays/: Makefile  mixed-arrays  mixed-arrays.cpp
Week1/Day4/: README.md
Week1/Day4/example/: Makefile  example.cpp
Week1/Day5/AssignMatrixMultiplication/: Makefile  matrix-multiplication.cpp  matrix.hpp
Week1/Project/: CMakeLists.txt  Makefile  README.md  account.cpp  account.h  bankcli.cpp  tests-build.sh
Week1/Project/tests/: account_test.cpp
Week2/Day1/: README.md
Week2/Day1/AssignConstFunctions/: Makefile  const  const.cpp
Week2/Day1/AssignFloatPrecision/: Makefile  float-precision  float-precision.cpp
Week2/Day1/AssignIsPowerOf2/: .perfect-square.cpp.swp  Makefile  is-power-of-2.cpp
Week2/Day1/AssignPerfectSquare/: Makefile  perfect-square  perfect-square.cpp
